--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "es5-shim": "^4.1.15",
     "gulp": "^3.9.0",
     "gulp-watch": "^4.3.5",
+    "html-loader": "^0.3.0",
     "imports-loader": "^0.6.5",
     "jquery": "^1.9.3",
     "memory-fs": "^0.2.0",
