--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Experience-Wall/sprout-theme#readme",
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.7.5",
     "es5-shim": "^4.1.15",
     "gulp": "^3.9.0",
     "gulp-watch": "^4.3.5",
@@ -46,5 +47,10 @@
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0",
     "webpack-livereload-plugin": "^0.4.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0"
   }
 }
