--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue-resource": "^0.1.17",
     "vue-router": "^0.7.6",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "webpack-dev-server": "^1.12.0",
+    "webpack-livereload-plugin": "^0.8.1"
   },
   "DevDependencies": {
     "babel-core": "^6.2.1",
