--- a/data/mapping.json
+++ b/data/mapping.json
@@ -1,19 +1,19 @@
 {
   "categoryMap" : {
-    "uncategorized" : 1,
+    "uncategorized" : 0,
     "Angular" : 4,
     "Angular2" : 1,
-    "CCPP" : 2,
-    "JS" : 9,
+    "JS" : 11,
     "Elisp" : 1,
-    "ThreeJs" : 1,
     "Ionic" : 3,
     "shell" : 3,
     "Mac" : 6,
     "Brower" : 2,
+    "C&CPP" : 2,
     "ReactNative" : 1,
     "Linux" : 11,
     "Haskell" : 1,
+    "Three.js" : 1,
     "CSS" : 1,
     "Raspberry" : 2,
     "HTML" : 2,
